--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>店内情報</li>
       </ul>
 
-      <a href="#https://www.google.co.jp/">Googleへ</a>
+      <a href="https://www.google.co.jp/">Googleへ</a>
       <img src="./xxx.jpg" alt="ゆーすけ">
 
   </body>
