--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sample</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
 
@@ -26,8 +27,40 @@
       </ul>
 
       <a href="https://www.google.co.jp/">Googleへ</a>
-      <img src="./xxx.jpg" alt="ゆーすけ">
+      <img src="../img/xxx.jpg" alt="ゆーすけ">
 
+      <table>
+        <tr>
+          <td></td>
+          <th>Open</th>
+          <th>Close</th>
+        </tr>
+
+        <tr>
+          <th>平日</th>
+          <td>11:00</td>
+          <td>21:00</td>
+        </tr>>
+
+        <tr>
+        <th>土日祝</th>
+        <td>11:00</td>
+        <td>23:00</td>
+        </tr>
+      </table>
+
+<p class="red_text">HELLO WORLD</p>
+<div class="bg_color_change">
+  <div class="box">
+  </div>
+  <p class="big">文字でかめ</p>
+</div>
+
+<div class="wrapper">
+  <div class="box1"></div>
+  <div class="box2"></div>
+  <div class="box3"></div>
+</div>
   </body>
 
 </html>
