--- a/20200510/kadai_2/3/html/index.html
+++ b/20200510/kadai_2/3/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>3</title>
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
 
