--- a/programming_academy_最終課題/html/index.html
+++ b/programming_academy_最終課題/html/index.html
@@ -29,6 +29,106 @@
   </head>
 
   <body>
+    <main>
+      <section>
+        <div class="image_wrapper">
+          <img src="../image/header-pic.jpg" alt="header-pic" width="90%">
+        </div>
 
+        <div class="wrapper_blue">
+          <div class="background_blue">
+            <h1 class="phrase_1">面倒な車検も税金もすべてコミコミ</h1>
+            <div class="label">
+              <h2 class="phrase_2">新車の軽自動車が月々<span class="empha">1</span>万円から乗れる!!</h2>
+            </div>
+            <h3 class="phrase_3">\7年間の基本料金がすべてコミコミ/</h3>
+
+            <div class="box_wrapper">
+              <div class="box">
+                <p class="keyword">車両代<br>費用</p>
+              </div>
+              <div class="box">
+                <p class="keyword">7年分の<br>税金</p>
+              </div>
+              <div class="box">
+                <p class="keyword">車検代<br>2回分</p>
+              </div>
+              <div class="box">
+                <p class="keyword">オイル交換<br>13回分</p>
+              </div>
+              <div class="box">
+                <p class="keyword">アドバ<br>イザー</p>
+              </div>
+              <div class="box">
+                <p class="keyword">フロア<br>マット</p>
+              </div>
+            </div>
+        </div>
+
+        <div class="banner_wrapper">
+          <div class="banner_box">
+            <p class="banner_text">Web限定特典バナー</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="background_car">
+        <p class="car_text">当店限定商品</p>
+        <div class="product-title-image">
+          <img src="../image/product-title-line-orange.png" alt="product-itle-line-orange" width="10%">
+        </div>
+
+        <div class="product_wrapper">
+          <div class="product">
+            <p class="price">月々<span class="empha">14，000</span>円</p>
+            <img src="../image/product.jpg" alt="product_1" width="100%">
+            <p class="info1">車種名が入ります</p>
+            <p class="info2">車の説明が入ります。車の説明が入ります。</p>
+          </div>
+
+          <div class="product">
+            <p class="price">月々<span class="empha">14，000</span>円</p>
+            <img src="../image/product2.jpg" alt="product_2" width="100%">
+            <p class="info1">車種名が入ります</p>
+            <p class="info2">車の説明が入ります。車の説明が入ります。</p>
+          </div>
+
+          <div class="product">
+            <p class="price">月々<span class="empha">14，000</span>円</p>
+            <img src="../image/product3.jpg" alt="product_3" width="100%">
+            <p class="info1">車種名が入ります</p>
+            <p class="info2">車の説明が入ります。車の説明が入ります。</p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="contact_section">
+        <div class="name_wrapper">
+          <label for="name" class="name">名前</label>
+          <input type="text" id="name" name="name" placeholder="Name" class="namebox">
+        </div>
+
+        <div class="mail_wrapper">
+          <label for="mail" class="mail">メールアドレス</label>
+          <input type="text" id="mail" name="mail" placeholder="Mail" class="mailbox">
+        </div>
+
+        <div class="textarea_wrapper">
+          <label for="textarea" class="textarea">お問い合わせ内容</label>
+          <textarea name="text" id="textarea" name="textarea" placeholder="Textarea" class="textareabox"></textarea>
+        </div>
+
+          <input type="submit" class="submit" value="送信">
+        </div>
+      </section>
+    </main>
   </body>
+
+  <footer>
+    <div class="footer_line">
+      <p class="footer_text">000-0000-0000<br>Copyrights ＠佐竹塾 all rights reserved.</p>
+    </div>
+  </footer>
+
 </html>
