--- a/programming_academy_最終課題/html/index.html
+++ b/programming_academy_最終課題/html/index.html
@@ -5,7 +5,7 @@
     <title>flat7_koryo</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <header class="header">
+    <header>
       <div class="header_line">
         <p class="header_text">新車の軽自動車が月々1万円から乗れるフラット7広陵</p>
       </div>
